# pandas-qx

./: CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
pandas_fx/: __init__.py  data_loads.py  fx_accessor.py  qx_accessor.py  stats_accessor.py
pandas_fx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pandas_qx/: __init__.py  data_loads.py  qx_accessor.py  stats_accessor.py
pandas_qx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_data_loads.py  test_qx_accessor.py  test_stats_accessor.py
