
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas-fx"
version = "0.1.0"
description = "Finance-oriented pandas DataFrame accessors"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5"
]

authors = [
    { name = "Your Name", email = "you@email.com" }
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pandas_fx" = ["data/*.csv"]

