
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas-qx"
version = "0.1.1"
description = "Finance-oriented pandas DataFrame accessors and quant analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5"
]

authors = [
    { name = "Mark Henry", email = "marknhenry@live.com" }
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pandas_qx" = ["data/*.csv"]

